# Microverse

./: .gitmodules  CMakeLists.txt  README.md
Documents/: Microverse.ai
Libraries/: FindFlounder.cmake
Resources/Logos/: Microverse.icns
Resources/Objects/PlanetCentre/: PlanetCentre.json
Resources/Objects/SkyboxStars/: SkyboxStars.json
Resources/Objects/SkyboxWhite/: SkyboxWhite.json
Resources/Shaders/: Hsv.glsl
Resources/Shaders/Atmosphere/: Atmosphere.frag  Atmosphere.vert
Resources/Shaders/Chunks/: Chunk.frag  Chunk.vert
Resources/Shaders/Filters/: Damage.frag
Resources/Shaders/Fog/: Fog.frag  Fog.vert
Resources/Shaders/Fogs/: Fog.frag  Fog.vert
Resources/Shaders/GasGiants/: GasGiant.comp  GasGiant.frag  GasGiant.vert
Resources/Shaders/Planet/: Planet.comp
Resources/Shaders/Post/: Damage.frag
Resources/Shaders/Rings/: Ring.frag  Ring.vert
Resources/Shaders/Terrains/: Terrain.frag  Terrain.vert
Scripts/: Info.plist  generate_vs.bat  link-resource.bat  link-resource.sh  link-resources.bat  link-resources.sh  package-macos.sh
Sources/: CMakeLists.txt  CMakeSources.cmake  Main.cpp  MainGame.cpp  MainGame.hpp  MainRenderer.cpp  MainRenderer.hpp  MainUpdater.cpp  MainWorld.cpp  Microverse.rc
Sources/Celestial/: Celestial.hpp  Gravity.cpp  Gravity.hpp  ICelestial.hpp  LodSphere.cpp  LodSphere.hpp  Orbit.cpp  Orbit.hpp  Planet.cpp  Planet.hpp  Ring.cpp  Ring.hpp  Star.cpp  Star.hpp
Sources/Celestial/Fogs/: MaterialFog.cpp  MaterialFog.hpp
Sources/Celestial/GasGiant/: MaterialGasGiant.cpp
Sources/Celestial/GasGiants/: MaterialGasGiant.cpp  MaterialGasGiant.hpp
Sources/Celestial/Materials/: MaterialGasGiant.cpp  MaterialGasGiant.hpp  MaterialRing.cpp  MaterialRing.hpp
Sources/Celestial/Rings/: MaterialRing.cpp  MaterialRing.hpp
Sources/Chunks/: MaterialChunk.cpp  MaterialChunk.hpp  MeshChunk.cpp  MeshChunk.hpp  QuadtreeChunk.cpp  QuadtreeChunk.hpp
Sources/Configs/: ConfigManager.cpp  ConfigManager.hpp
Sources/Fog/: Fog.cpp  Fog.hpp  RendererFog.cpp  RendererFog.hpp
Sources/Microverse/: CMakeLists.txt  CMakeSources.cmake  Main.cpp
Sources/Microverse/Scenes/: FpsPlayer.cpp
Sources/Microverse/Uis/Navigation/: UiNavigation.cpp
Sources/Planet/: Gravity.cpp  Gravity.hpp  MaterialChunk.cpp  MaterialChunk.hpp  MeshChunk.cpp  MeshChunk.hpp  Planet.cpp  Planet.hpp  QuadtreeChunk.cpp  QuadtreeChunk.hpp
Sources/Polyorbis/: CMakeLists.txt  CMakeSources.cmake
Sources/Post/Filters/: FilterDamage.cpp  FilterDamage.hpp
Sources/Scenes/: CameraFps.cpp  CameraFps.hpp  CameraFree.cpp  CameraFree.hpp  FpsCamera.cpp  FpsCamera.hpp  FpsPlayer.cpp  FpsPlayer.hpp  ManagerUis.cpp  PlayerFps.cpp  PlayerFps.hpp  Scene1.cpp  Scene1.hpp
Sources/Scenes/Uis/: OverlayDebug.cpp
Sources/Scenes/Uis/Navigation/: UiNavigation.cpp
Sources/Terrains/: LodBehaviour.cpp  LodBehaviour.hpp  MaterialTerrain.cpp  MaterialTerrain.hpp  MeshTerrain.cpp  MeshTerrain.hpp
Sources/Uis/: OverlayDebug.cpp  OverlayDebug.hpp
Sources/Uis/Navigation/: ContentExit.cpp  ContentExit.hpp  UiNavigation.cpp  UiNavigation.hpp  UiTab.cpp  UiTab.hpp
Sources/Voxels/: VoxelChunk.cpp  VoxelChunk.hpp
Sources/Waters/: MaterialWater.cpp  MaterialWater.hpp  MeshWater.cpp  MeshWater.hpp
Sources/World/: World.cpp  World.hpp
